Fix readonly alignment

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -292,11 +292,12 @@ body {
       font-size: .65rem;
       background: @background-menu;
       margin-left: 5px;
-      margin-top: 2px;
+      margin-top: -3px;
       padding: 1px 5px;
       display: inline-block;
       color: @color-text--muted;
       font-weight: 400;
+      vertical-align: middle;
 
       i {
         margin-right: 3px;
